Método validar ficha completo, no probado
Método de validar ficha completo en la entidad Board, falta cambiar al controlador.